--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -6,7 +6,7 @@
 <android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.v7.preference.Preference android:title="@string/backups">
         <intent
-            android:targetClass="com.flowcrypt.email.ui.activity.settings.BackupSettingsActivity"
+            android:targetClass="com.flowcrypt.email.ui.activity.settings.SearchBackupsInEmailActivity"
             android:targetPackage="@string/application_id" />
     </android.support.v7.preference.Preference>
 
