--- a/FlowCrypt/src/main/res/layout/nav_menu_account_item.xml
+++ b/FlowCrypt/src/main/res/layout/nav_menu_account_item.xml
@@ -14,7 +14,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageViewUserPhoto"
+        android:id="@+id/imageViewActiveUserPhoto"
         android:layout_width="@dimen/user_photo_size"
         android:layout_height="@dimen/user_photo_size"
         android:layout_margin="@dimen/default_margin_content"
@@ -33,7 +33,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/imageViewUserPhoto"
+        app:layout_constraintLeft_toRightOf="@+id/imageViewActiveUserPhoto"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5">
 
