Added showing "Import private key" in CheckKeysActivity.| Close #302

--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textViewFirstPasswordCheckTitle"
+            android:id="@+id/textViewTitle"
             style="@style/ScreenHeading"
             android:text="@string/set_up_flow_crypt"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -29,7 +29,7 @@
             android:layout_marginTop="@dimen/margin_top_found_backup"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/textViewFirstPasswordCheckTitle"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             app:layout_constraintWidth_default="wrap">
 
             <LinearLayout
@@ -39,11 +39,11 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-                app:layout_constraintTop_toBottomOf="@+id/textViewFirstPasswordCheckTitle"
+                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                 app:layout_constraintWidth_default="wrap">
 
                 <TextView
-                    android:id="@+id/textViewCheckKeysTitle"
+                    android:id="@+id/textViewSubTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
