Added encryption of the files in PrepareOutgoingMessagesJobIntentService.| #91

--- a/FlowCrypt/src/main/res/xml/filepaths.xml
+++ b/FlowCrypt/src/main/res/xml/filepaths.xml
@@ -7,4 +7,8 @@
     <external-path
         name="external_files"
         path="." />
+
+    <cache-path
+        name="cache_files"
+        path="." />
 </paths>
