Added ActionMode in EmailListFragment. It helps delete a couple messages per one action.| #328

--- a/FlowCrypt/src/main/res/values/themes.xml
+++ b/FlowCrypt/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@android:color/white</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeStyle">@style/AppWidget.ActionMode</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
