--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
 
     <style name="AppWidget" />
 
+    <style name="AppWidget.ActionMode" parent="Base.Widget.AppCompat.ActionMode">
+        <item name="background">@color/gray</item>
+        <item name="android:background">@color/gray</item>
+    </style>
+
     <style name="AppWidget.Button">
         <item name="android:layout_height">@dimen/default_button_height</item>
         <item name="android:textAllCaps">true</item>
