--- a/FlowCrypt/src/main/res/layout/activity_backup_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_backup_keys.xml
@@ -58,8 +58,8 @@
                     layout="@layout/backup_options"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-                    app:layout_constraintRight_toLeftOf="@+id/guidelineRight" />
+                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+                    app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guidelineLeft"
