--- a/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
@@ -3,10 +3,12 @@
   ~ Contributors: DenBond7
   -->
 
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.preference.Preference
         android:layout="@layout/preference_item"
-        android:title="@string/simulate_app_crash">
+        android:title="@string/simulate_app_crash"
+        app:iconSpaceReserved="false">
         <intent
             android:targetClass="com.flowcrypt.email"
             android:targetPackage="@string/application_id" />
