--- a/FlowCrypt/src/main/res/xml/preferences_security_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_security_settings.xml
@@ -3,8 +3,10 @@
   ~ Contributors: DenBond7
   -->
 
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.preference.Preference
+        app:iconSpaceReserved="false"
         android:key="@string/preferences_key_security_change_pass_phrase"
         android:title="@string/change_pass_phrase" />
 </android.support.v7.preference.PreferenceScreen>
