--- a/FlowCrypt/src/main/res/layout/preference_item.xml
+++ b/FlowCrypt/src/main/res/layout/preference_item.xml
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
-            android:maxLines="1"
+            android:singleLine="true"
             android:textAppearance="@style/Preference_TextAppearanceMaterialSubhead"
             tools:text="Title" />
 
