--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -27,6 +27,7 @@
     <item name="loader_id_change_pass_phrase" type="id" />
     <item name="loader_id_save_backup_to_inbox" type="id" />
     <item name="loader_id_subscribe_to_message_changes" type="id" />
+    <item name="loader_id_load_attachments" type="id" />
 
     <item name="syns_request_code_update_label_passive" type="id" />
     <item name="syns_request_code_update_label_active" type="id" />
