--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -27,6 +27,11 @@
         <item name="colorButtonNormal">@color/light</item>
     </style>
 
+    <style name="AppWidget.Button.Red">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="colorButtonNormal">@color/red</item>
+    </style>
+
     <style name="AppWidget.Button.SilverWithWhiteText">
         <item name="android:textColor">@android:color/white</item>
         <item name="colorButtonNormal">@color/silver</item>
